# learning_ocaml

./: .gitignore  README.md
Introduction/intro_ex/test/: dune  test_intro_ex.ml  test_intro_ex_alcotest.ml  test_intro_ex_ounit.ml  test_intro_ex_qcheck.ml
OCaml_programming/file_system/test/: dune  test_file_directory.ml  test_file_system_avl_alcotest.ml  test_file_system_avl_qcheck.ml  test_file_system_simple_balance.ml
OCaml_programming/ocaml_digestif_hash/lib/: digital_signature_common.ml  digital_signature_common.mli  digital_signature_verifier_sha3_256.ml  digital_signature_verifier_sha3_256.mli  dune  file_integrity.ml  file_integrity_sha256.ml  file_integrity_sha256.mli  password_storage.mli  password_storage_sha256.ml  simple_blockchain_protocol_ripemd160.ml  simple_blockchain_protocol_ripemd160.mli  uids.ml  uids.mli  uids_blake2b.ml  uids_blake2b.mli
OCaml_programming/ocaml_digestif_hash/test/: dune  test_digital_signature_verifier_sha3_256.ml  test_file_integrity_sha256.ml  test_ocaml_digestif_hash.ml  test_password_storage.ml  test_password_storage_sha256.ml  test_simple_blockchain_protocol_ripmd160.ml  test_uids.ml  test_uids_blake2b.ml
OCaml_programming/ocaml_gc_tcp_server_client/lib/: dune  errors.ml  logs.ml  messages.ml  messages.mli  tcp_cli_utils.ml  tcp_client.ml  tcp_client.mli  tcp_client_cli.ml  tcp_server.ml  tcp_server_cli.ml  tpc_server.mli
OCaml_programming/ocaml_sorts/: dune-project  ocaml_sorts.opam
OCaml_programming/ocaml_sorts/bench/: README.md  benchmark_sorts.ml  benchmark_sorts_bechamel.ml  dune
OCaml_programming/ocaml_sorts/lib/: dune  sorts.ml  sorts.mli
OCaml_programming/ocaml_sorts/test/: dune  test_ocaml_sorts_alcotest.ml
OCaml_programming/ocaml_tcp_client_server/lib/: dune  errors.ml  messages.ml  messages.mli  tcp_cli_common.ml  tcp_client.ml  tcp_client.mli  tcp_client_cli.ml  tcp_common.ml  tcp_server.ml  tcp_server.mli  tcp_server_cli.ml
OCaml_programming/ocaml_tcp_client_server/test/: dune  test_ocaml_tcp_client_server.ml  test_tcp_client.ml  test_tcp_client_server.ml  test_tcp_client_server_cli.ml  test_tcp_server.ml
OCaml_programming/ocaml_trees/test/: dune  test_avl_ounit.ml  test_avl_qcheck.ml  test_binary_tree.ml  test_patricia_tree_alcotest.ml  test_red_black_tree_alcotest.ml  test_trie_tree_alcotest.ml
church_app_events/: .env  Cargo.toml  babel.config.js
church_app_events/backend/: Cargo.toml  email.rs  eventrsvp.rs  events.rs  homegroup.rs  homegrouprsvp.rs  main.rs  serving.rs  servingrsvp.rs  servingsignup.rs  user.rs
church_app_events/backend/donation/: currency.rs  currency_handlers.rs  currency_service.rs  donation.rs  donation_handlers.rs  donation_repository.rs  donation_service.rs  notification_service.rs  payment_method.rs  payment_method_handlers.rs  payment_method_service.rs  receipt.rs  receipt_handlers.rs  receipt_repository.rs  recurring_donation.rs  recurring_donation_service.rs
church_app_events/backend/media/: cache.rs  config.rs  error.rs  media.rs  media_repository.rs  models.rs  rate_limiter.rs  watch_history.rs  watch_history_repository.rs  youtube_service.rs
church_app_events/docs/: development_plan.md
church_app_events/frontend-churchapp/: .env  App.js  android_setup.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json
church_app_events/frontend-churchapp/android/: settings.gradle
church_app_events/frontend-churchapp/android/app/: build.gradle
church_app_events/frontend-churchapp/ios/: Podfile
church_app_events/frontend-churchapp/ios/frontendchurchapp/: Info.plist
church_app_events/frontend-churchapp/ios/frontendchurchapp.xcodeproj/: project.pbxproj
church_app_events/frontend-churchapp/src/components/: EventCard.js  Header.js  HeaderUser.js  HomeGroupCard.js  MediaCard.js  MediaUpload.js
church_app_events/frontend-churchapp/src/contexts/: AuthContext.js
church_app_events/frontend-churchapp/src/navigation/: AdminNavigator.js  AuthNavigator.js  CustomTabButton.js  UserNavigator.js
church_app_events/frontend-churchapp/src/screens/admin/: DashboardScreen.js  ManageEventsScreen.js  ManageServingScreen.js
church_app_events/frontend-churchapp/src/screens/constants/: constants.js
church_app_events/frontend-churchapp/src/screens/shared/: LoginScreen.js  LogoutScreen.js  ProfileScreen.js
church_app_events/frontend-churchapp/src/screens/styles/: formStyles.js
church_app_events/frontend-churchapp/src/screens/user/: EventRSVP.js  EventsScreen.js  HomeGroupScreen.js  HomeScreen.js  MediaScreen.js  ServingScreen.js
church_app_events/frontend-churchapp/src/services/: apiConfig.js  eventService.js  eventrsvpService.js  userService.js
church_app_events/frontend-churchapp/src/services/events/: eventRsvpService.js  eventService.js
church_app_events/frontend-churchapp/src/services/homegroups/: homeGroupRsvpService.js  homeGroupService.js
church_app_events/frontend-churchapp/src/services/media/: mediaService.js  youtubeService.js
church_app_events/frontend-churchapp/src/services/servings/: servingRsvpService.js  servingService.js
event_management/: .env  Cargo.toml
event_management/backend/: Cargo.toml  events.rs  google_calendar.rs  login.rs  main.rs  users.rs
event_management/backend/src/: login.rs  main.rs  users.rs
event_management/frontend/: .env  package-lock.json  package.json
event_management/frontend/public/: index.html
event_management/frontend/src/: App.js  Dashboard.js  Home.js  Login.css  Login.js  UserRegistration.css  UserRegistration.js
event_management/frontend/src/components/: Home.css  Home.js
event_management/frontend/src/components/auth/: Dashboard.css  Dashboard.js  Login.js  SignUp.css  SignUp.js
event_management/frontend/src/components/events/: EventDashboard.css  (+7 more)
event_management_rust/: .env  Cargo.toml  README.md
event_management_rust/frontend/: package-lock.json
event_management_rust/frontend/src/: App.js  Home.css  Home.js  Login.css  Login.js  UserRegistration.css  UserRegistration.js
event_management_rust/server/: server.js
event_management_rust/src/: main.rs  users.rs
(+195 files in other folders)
