[package]
name = "church_app_events"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.0"
uuid = "1.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
serde_json = "1.0"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls", "builder", "smtp-transport"] }
regex = "1.5"
lazy_static = "1.4"


[[bin]]
name = "church_app_events"         # Name of the binary
path = "backend/main.rs"     # Path to the main file
