[package]
name = "event_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
idna = "1.0.3"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "macros"] }
bcrypt="0.15.1"

[[bin]]
name= "event_management"
path="backend/main.rs"
