[package]
name = "event_management_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
syn = { version = "1.0", features = ["full", "parsing"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time"] }
time = "0.3"
