(lang dune 3.16)

(name ocaml_sorts)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_sorts)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune core_bench)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
