(test
 (name test_file_integrity_sha256)
 (libraries alcotest ocaml_digestif_hash))

(test
 (name test_password_storage_sha256)
 (libraries alcotest ocaml_digestif_hash))

(test
 (name test_uids_blake2b)
 (libraries alcotest ocaml_digestif_hash))

(test
 (name test_simple_blockchain_protocol_ripmd160)
 (libraries alcotest ocaml_digestif_hash))

(test
 (name test_digital_signature_verifier_sha3_256)
 (libraries
  alcotest
  mirage-crypto-rng
  mirage-crypto-rng.unix
  ocaml_digestif_hash))
