(library
 (name ocaml_gc_tcp_server_client)
 (libraries ocaml_digestif_hash yojson base64 lwt lwt.unix cstruct)
 (modules tcp_server tcp_client messages errors tcp_cli_utils logs))

(executable
 (name tcp_server_cli)
 (modules tcp_server_cli)
 (libraries ocaml_gc_tcp_server_client))

(executable
 (name tcp_client_cli)
 (modules tcp_client_cli)
 (libraries ocaml_gc_tcp_server_client))
