(test
 (name test_tcp_server)
 (libraries alcotest lwt.unix lwt ocaml_tcp_client_server))

(test
 (name test_tcp_client_server)
 (libraries alcotest lwt.unix lwt ocaml_tcp_client_server))

(test
 (name test_tcp_client_server_cli)
 (libraries alcotest bos rresult lwt.unix lwt ocaml_tcp_client_server))
