(test
 (name test_binary_tree)
 (libraries ounit2 ocaml_trees))

(test
 (name test_avl_ounit)
 (libraries ounit2 ocaml_trees))

(test
 (name test_avl_qcheck)
 (libraries qcheck ocaml_trees))

(test
 (name test_red_black_tree_alcotest)
 (libraries alcotest ocaml_trees))

(test
 (name test_trie_tree_alcotest)
 (libraries alcotest ocaml_trees))

(test
 (name test_patricia_tree_alcotest)
 (libraries alcotest ocaml_trees))
